--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,24 @@
 buildscript {
     ext {
-        compose_version = '1.2.0'
+        compose_version = '1.5.0-beta03'
+        material3_version = '1.2.0-alpha03'
+
+        hilt_version ='2.46.1'
+        nav_version = '1.9.42-beta'
+        compose_hilt_navigation_version = '1.0.0'
+        room_version = '2.5.2'
+        retrofit_version = '2.9.0'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${hilt_version}"
+    }
+}
+
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'com.android.application' version '8.0.1' apply false
+    id 'com.android.library' version '8.0.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
+    id 'com.google.dagger.hilt.android' version '2.46.1' apply false
+    id 'com.google.devtools.ksp' version '1.8.22-1.0.11' apply false
 }
